// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementCardBody renders correct snapshot 1`] = `
<div>
  <div
    class="DescribeElementCardBody-cardContent-1"
  >
    <p
      class="MuiTypography-root MuiTypography-body2 DescribeElementCardBody-bodyText-2 css-1o1pkbg-MuiTypography-root"
    >
      expectedContent
    </p>
  </div>
</div>
`;

exports[`DescribeElementCardBody renders correct snapshot with switches 1`] = `
<div>
  <div
    class="MuiCardMedia-root DescribeElementCardBody-cardImage-8 css-16cvb1l-MuiCardMedia-root"
    role="img"
    style="background-image: url(moreContent);"
  />
</div>
`;
